💥 Add sender(AppUser) to FriendshipChat entity
JDL :
- FriendshipChat{sender(id) required} to AppUser

--- a/src/main/webapp/i18n/en/friendshipChat.json
+++ b/src/main/webapp/i18n/en/friendshipChat.json
@@ -20,7 +20,8 @@
       "id": "ID",
       "message": "Message",
       "sendAt": "Send At",
-      "friendship": "Friendship"
+      "friendship": "Friendship",
+      "sender": "Sender"
     }
   }
 }
