--- a/src/main/webapp/i18n/fr/friendshipChat.json
+++ b/src/main/webapp/i18n/fr/friendshipChat.json
@@ -20,7 +20,8 @@
       "id": "ID",
       "message": "Message",
       "sendAt": "Send At",
-      "friendship": "Friendship"
+      "friendship": "Friendship",
+      "sender": "Sender"
     }
   }
 }
