--- a/src/main/webapp/i18n/fr/password.json
+++ b/src/main/webapp/i18n/fr/password.json
@@ -1,6 +1,6 @@
 {
   "password": {
-    "title": "Changer le mot de passe pour [<strong>{{username}}</strong>]",
+    "title": "Changer le mot de passe pour <strong>{{username}}</strong>",
     "form": {
       "button": "Sauvegarder"
     },
